--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.15.1
   flutter_bloc: ^8.1.3
   freezed_annotation: ^2.4.1
+  firebase_database: ^10.2.5
 
 dev_dependencies:
   flutter_test:
